Added controller and security